# pyromof

./: .flake8  .gitignore  README.md  optimize.py  postprocessing.py  pyproject.toml
.github/: .copilot-instructions.md
.github/workflows/: main.yml
docs/: input_data_template.xlsx  usage.md
pyromof/: analyse_sensitivity.py  biomass_duration_curve.py  cli.py  compare_scenarios.py  electricity_feed_in_revenue.py  feed_in_premium.py  helpers.py  load_demand_profiles.py  load_duration_curve.py  measure_flexibility.py  optimize.py  paths.py  pipeline.py  plotting.py  postprocessing.py  visualize_network.py
pyromof/policies/: implement_policies.py  postprocess_capex_subsidies  postprocess_capex_subsidies.py  postprocess_feed_in_tariff.py  postprocess_feed_in_tarrif  postprocess_log_policies.py  postprocess_policies_functions.py  postprocess_sliding_premium.py  preprocess_implement_storage_subsidies.py  sliding_premium.py
pyromof/postprocessing_functions/: capex_policies.py  log_policies.py  opex_policies.py  postprocess_capex_subsidies.py  postprocess_feed_in_tariff.py  postprocess_log_policies.py  postprocess_policies_functions.py  postprocess_sliding_premium.py
pyromof/preprocessing_functions/: define_input_data_functions.py  define_preprocessing_input_data_functions.py  define_storage_subsidies.py  implement_input_data_functions.py  implement_policies.py  (+5 more)
scripts/: optimize.py  postprocessing.py
tests/: test_electricity_feed_in_revenue.py  test_implement_policies.py  test_load_duration_curve.py  test_optimize.py  test_postprocessing.py
(+7 files in other folders)
