[project]
name = "pyromof"
version = "0.1"
description = "An oemof model of a pyrolysis plant with flexible outputs"
authors = [
    {name = "Monika Orlowski <monika.orlowski@ioew.de>"}
]
license = {text = "MIT licence"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "oemof (>=1.0,<2.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib",
    "typeguard"
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

